vlib/v/checker/tests/in_mismatch_type.out
vlib/v/checker/tests/in_mismatch_type.v:16:7: error: the data type on the left of `in` must be a string (is `any_int`) 
   14 |         println('yeah')
   15 |     }
   16 |     if 3 in s {
      |          ~~
   17 |         println('dope')
   18 |     }
vlib/v/checker/tests/in_mismatch_type.v:19:9: error: the data type on the left of `in` must be a string (is `byte`) 
   17 |         println('dope')
   18 |     }
   19 |     if `a` in s {
      |            ~~
   20 |         println("oh no :'(")
   21 |     }
vlib/v/checker/tests/in_mismatch_type.v:22:7: error: `in` can only be used with an array/map/string 
   20 |         println("oh no :'(")
   21 |     }
   22 |     if 1 in 12 {
      |          ~~
   23 |         println('right')
   24 |     }
